# infomagic

./: .gitignore  README.md  UserGuide.md  fix-convert.js  package-lock.json  package.json
.github/workflows/: package.yml
.kiro/specs/: style-consistency-spec.md
scripts/: package.mjs  package.ps1
src/: main.ts
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error_log.rs  lib.rs  main.rs  outline.rs  pdf.rs  project.rs  style_guide.rs  template.rs
src-tauri/src/ai/: imggen.rs  llm.rs
src-tauri/styles/: business-dark.md  business-light.md  business.md  encyclopedia.md  ink-wash.md  medical.md  popular-science.md  sunshine.md  wechat.md
src/components/: ImageCard.vue  ImagePromptEditModal.vue  ImageRefineModal.vue  Sidebar.vue  StylePicker.vue  TemplatePicker.vue
src/router/: index.ts
src/stores/: project.ts
src/styles/: main.css
src/views/: AboutView.vue  LogView.vue  ProjectList.vue  Step1_Config.vue  Step2_Outline.vue  Step3_Pages.vue  Step4_Images.vue  Step5_Export.vue  StyleManagement.vue  TemplateManagement.vue
